<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Android Team MIS-SEG Year 2021
  ~ Copyright (c) 2021. Guanzon Central Office
  ~ Guanzon Bldg., Perez Blvd., Dagupan City, Pangasinan 2400
  ~ Project name : GhostRider_Android
  ~ Module : GhostRider_Android.ahMonitoring
  ~ Electronic Personnel Access Control Security System
  ~ project file created : 4/24/21 3:19 PM
  ~ project file last modified : 4/24/21 3:18 PM
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/GhostRiderMaterialTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Fragment_LeaveApplication"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_bg_guanzon_orange"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias=".2">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Leave Application"
                        android:scrollHorizontally="false"
                        android:fontFamily="@font/roboto"
                        android:textSize="23sp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lbl_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dela Cruz, Josemari Joma, S."
                        android:scrollHorizontally="false"
                        android:fontFamily="@font/roboto"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lbl_userPosition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DSA - Bookkeeper"
                        android:scrollHorizontally="false"
                        android:fontFamily="@font/roboto_light"
                        android:textSize="18sp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lbl_userBranch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Local data is not sync"
                        android:scrollHorizontally="false"
                        android:fontFamily="@font/roboto_light"
                        android:textSize="18sp"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_transnox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sHintTransNox"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomDropDownTilStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Leave Type">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spn_leaveType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sHintDateFrm"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_dateFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:focusedByDefault="false"
                android:inputType="textShortMessage"
                style="@style/TextInputStyle.Edittext"
                android:autofillHints="Business trip destination and purpose."
                android:layout_margin="5dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sHintDateTo"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_dateTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:focusedByDefault="false"
                    android:inputType="textShortMessage"
                    style="@style/TextInputStyle.Edittext"
                    android:autofillHints="Business trip destination and purpose."
                    android:layout_margin="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:hint="No Of Day/s"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_noOfDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:text="0"
                    android:focusedByDefault="false"
                    android:inputType="textShortMessage"
                    style="@style/TextInputStyle.Edittext"
                    android:autofillHints="Business trip destination and purpose."
                    android:layout_margin="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sHintPurpose"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:digits="@string/free_text_restriction"
                android:lines="3"
                style="@style/TextInputStyle.Edittext"
                android:autofillHints="Business trip destination and purpose."
                android:layout_margin="5dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sBtnSubmitApp"
            style="@style/MaterialButtonAccent"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>