<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#E2E2E2"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:paddingHorizontal="50dp"
        android:background="@drawable/background_dialog">

        <TextView
            android:id="@+id/lbl_dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Samsung Knox"
            android:textSize="21sp"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/material_black"/>

        <TextView
            android:id="@+id/lbl_dialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Activating. Please wait..."
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/material_black"/>

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            tools:targetApi="lollipop" />

    </LinearLayout>

</androidx.cardview.widget.CardView>